# nytrix

./: .clangd  .editorconfig  .gitignore  .lsan.supp  CMakeLists.txt  LICENSE  Makefile  README.md  make
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml  multi-platform.yml
docs/: CHANGELOG.md  DOCKER.md  LANGUAGE.md  METAPROGRAMMING.md  PROPOSALS.md  README.md  TESTING.md  TODO.md
docs/assets/: web.css  web.html  web.js
docs/info/: ny.texi  nytrix.ebnf  nytrix.texi
docs/learn/: diagnostics.md  examples.md  library.md  metaprogramming.md  native.md  networking.md  packages.md  performance.md  programs.md  repl.md  start.md  testing.md  tooling.md  troubleshooting.md  ui.md
docs/spec/: comptime.md  control-flow.md  errors.md  functions.md  imports.md  language.md  modules.md  native.md  operators.md  patterns.md  runtime.md  source.md  syntax.md  types.md  values.md
etc/assets/dict/: english-quadgrams.txt  english-trigrams.txt
etc/assets/info/: ny.texi
etc/assets/shaders/: default_frag.glsl  default_vert.glsl  default_vert_ubo.glsl  sdf_vert.glsl
etc/assets/text/: lorem.txt
etc/examples/: 110.ny  ant.ny  args.ny  cloc.ny  conway.ny  matrix.ny  raylib.ny
etc/info/: ny.texi  nytrix.texi
etc/projects/: 110.ny  args.ny  gamepad.ny  term.ny
etc/tests/: 110.ny  ant.ny  args.ny  cloc.ny  conway.ny  fractal.ny  gamepad.ny  matrix.ny  pong.ny  raylib.ny  sdl.ny  sound.ny  term.ny  ui.ny
etc/tools/: auto_wrap_c  bundle_std  bundle_std.py  cmake.py  commands.py  context.py  conv  conv.py  cross.py  deps.py  detect.py  docstrings.py  fb.py  fmt.py  fuzz  fuzz.py  gpumatrix.py  jobs.py  main.py  nyfmt.py  optmatrix.py  perf.py  perfgate.py  repetitions.py  run_tests  run_tests.py  std.py  stdbundle  test.py  tests  texi2man  tidy  tidy.py  toolchain-arm.cmake  toolchain-windows.cmake  toolchain.py  utils.py  web.py  webdoc
examples/: args.ny  cloc.ny  raylib.ny
lib/core/: alloc.ny  ast.ny  cache.ny  collections.ny  common.ny  counter.ny  cps.ny  debug.ny  dict.ny  dict_alias.ny  error.ny  general.ny  glob.ny  inspect.ny  io.ny  iter.ny  list.ny  mem.ny  mod.ny  primitives.ny  primitives_test.ny  progress.ny  re.ny  reflect.ny  regex.ny  set.ny  str.ny  tbuf.ny  term.ny  test.ny  tuple.ny
lib/math/: backends.ny  big.ny  bigint.ny  bigrat.ny  bin.ny  complex.ny  crypto.ny  ct.ny  float.ny  gf.ny  hash.ny  hensel.ny  integer.ny  logic.ny  matrix.ny  mod.ny  noise.ny  nt.ny  ntt.ny  poly.ny  quat.ny  random.ny  ring.ny  scalar.ny  simmd.ny  smt.ny  stat.ny  vector.ny
lib/os/: accel.ny  args.ny  async.ny  atomic.ny  clipboard.ny  clock.ny  dirs.ny  disasm.ny  ffi.ny  fs.ny  gpu.ny  info.ny  interact.ny  io.ny  mod.ny  parallel.ny  path.ny  platform.ny  prim.ny  process.ny  subprocess.ny  sys.ny  thread.ny  time.ny
lib/parse/: bin.ny  mod.ny
lib/str/: ascii.ny  base.ny  bytes.ny  glob.ny  io.ny  mod.ny  path.ny
lib/text/: ascii.ny  base.ny  bytes.ny  io.ny  mod.ny  path.ny
lib/ui/: camera.ny  consts.ny  diag.ny  event.ny  gamepad.ny  glfw.ny  input.ny  key.ny  mod.ny  terminal.ny  vterm.ny  window.ny
lib/util/: ast.ny  common.ny  counter.ny  general.ny  inspect.ny  utils.ny
src/ast/: ast.c  ast.h  json.h
src/base/: args.c  args.h  common.h  compat.h  curl.c  curl.h  dbg.c  dbg.h  dirent.h  hash.c  hash.h  intern.c  intern.h  loader.c  loader.h  options.c  options.h  process.c  process.h  progress.c  progress.h  ptrcast.h  run.c  strbuf.h  time.c  time.h  util.c  util.h
src/code/: binary.c  braun.c  braun.h  code.h  core.c  debug.c  diag.c  emit.h  eqsat.c  eqsat.h  expr.c  fficlang.c  fficlang.h  func.c  funcpurity.c  gencall.c  gencalltypes.c  genintrinsics.c  jit.c  jit.h  llvm.c  llvm.h  module.c  nullnarrow.c  nullnarrow.h  priv.h  scope.c  stmt.c  syms.c  systems.c  systems.h  typeinfer.c  typeinfer.h  typepipeline.c  typepipeline.h  types.c  types.h  visitor.c  visitor.h
src/compiler/: lsp_server.c  main.c  runtime_state.c  util.c  util.h
src/include/: ast.h  ast_json.h  codegen.h  common.h  completion.h  highlight.h  lexer.h  parser.h  repl.h  repl_types.h  std_loader.h
src/lex/: lexer.c  lexer.h
src/parse/: ast.c  ast.h  core.c  expr.c  json.h  lexer.c  lexer.h  match.c  parser.h  priv.h  shared.c  stmt.c  stmtflow.c
src/repl/: color.c  compl.c  doc.c  priv.h  read.c  read.h  repl.c  repl.h  types.h  util.c
src/rt/: ast.c  bigint.c  core.c  defs.h  ffi.c  ffigates.c  ffigates.h  gc.c  gc.h  gltf.c  init.c  math.c  memory.c  os.c  proof.c  runtime.h  shared.h  simmd.c  string.c
src/wire/: build.c  build.h  bundle.c  bundle.h  cache.c  cache.h  pipe.c  pipe.h
std/audio/: diag.ny  mixer.ny  mod.ny  res.ny  source.ny
std/cli/: mod.ny  tui.ny
std/collections/: dict.ny  heap.ny  mod.ny  queue.ny  set.ny  sort.ny
std/core/: alloc.ny  cps.ny  debug.ny  dict.ny  error.ny  iter.ny  mem.ny  mod.ny  primitives.ny  reflect.ny  set.ny  test.ny  tuple.ny
std/enc/: csv.ny  json.ny  mod.ny  obj.ny  xml.ny  zlib.ny
std/image/: mod.ny  ops.ny  pack.ny
std/io/: fmt.ny  fs.ny  glob.ny  mod.ny  path.ny
std/iter/: itertools.ny  mod.ny
std/math/: bigint.ny  float.ny  hash.ny  logic.ny  matrix.ny  mod.ny  noise.ny  nt.ny  quat.ny  random.ny  stat.ny  timefmt.ny  vector.ny
std/net/: http.ny  requests.ny  socket.ny
std/os/: accel.ny  args.ny  clipboard.ny  dirs.ny  ffi.ny  fs.ny  gpu.ny  info.ny  io.ny  mod.ny  path.ny  process.ny  sys.ny  thread.ny  time.ny
std/process/: mod.ny
std/str/: bytes.ny  glob.ny  io.ny  json.ny  mod.ny  path.ny  str.ny  term.ny
std/strings/: bytes.ny  str.ny  timefmt.ny
std/text/: base.ny  bytes.ny  glob.ny  io.ny  mod.ny
std/ui/: consts.ny  diag.ny  glfw.ny  input.ny  mod.ny  window.ny
std/util/: ast.ny  base64.ny  convert.ny  counter.ny  general.ny  inspect.ny  json.ny  msgpack.ny  progress.ny  regex.ny  url.ny  urllib.ny  utils.ny  uuid.ny  zlib.ny
test/bench/: dict.ny  fibonacci.ny  float.ny  list_ops.ny
test/runtime/: case.ny  comments.ny  comptime.ny  control.ny  edge_cases.ny  if.ny  loop.ny  naming.ny  operator.ny  primitives.ny  print.ny  stdlib.ny  strings.ny
(+1860 files in other folders)
